fix: 뷰모델과 뷰 컨트롤러에서의 이벤트를 다르게 받던 문제 수정
textView의 이벤트 방출이 뷰모델과 컨트롤러가 값이 맞지 않아서 보니 뷰모델이 컨트롤러보다 늦게 구독을 시작하는 것을 발견
뷰모델 인스턴스 생성 - 뷰모델에서의 구독시작 - 뷰컨트롤러 인스턴스 생성(스토리보드로부터, 이때 textView의 placeholder가 방출) - viewDidLoad에서의 구독시작(placeholder를 받지 못함)
또한 placeholder를 받지 못하더라도 skip을 사용해 시점을 맞추려고 했으나 skip이 따로 적용되었음, 다시 stream의 동기화를 위해 share를 적용했으나 해결하지 못하였음.
문제는 함수가 호출되면서 매 호출시 다른 인스턴스의 옵저버블이 만들어지는 것이었고 당연히 각각 다른 stream이 적용됨, 따라서 lazy var를 사용해 모든 곳에서 동일한 인스턴스를 참조하도록 변경함

--- a/PhotoMemo/Storyboard/Base.lproj/Main.storyboard
+++ b/PhotoMemo/Storyboard/Base.lproj/Main.storyboard
@@ -92,7 +92,7 @@
                                     <outletCollection property="gestureRecognizers" destination="cQT-9o-C2e" appends="YES" id="PkL-nJ-865"/>
                                 </connections>
                             </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Memo" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="IA6-Gj-RSo">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="메모 들어갈 부분" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="IA6-Gj-RSo">
                                 <rect key="frame" x="0.0" y="409" width="414" height="453"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
