feat: 검색 바 UI 구현

--- a/PhotoMemo/Storyboard/Base.lproj/Main.storyboard
+++ b/PhotoMemo/Storyboard/Base.lproj/Main.storyboard
@@ -164,16 +164,26 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="KhC-Cc-Kok">
+                                <rect key="frame" x="0.0" y="140" width="414" height="0.0"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" id="x05-az-IKI"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="KhC-Cc-Kok" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="3Y2-VR-93o"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kFE-YB-dsB" secondAttribute="trailing" id="8JC-le-F4l"/>
                             <constraint firstItem="wcT-pe-i2b" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="9gn-yH-Id7"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wcT-pe-i2b" secondAttribute="bottom" id="Ckq-LN-l4F"/>
+                            <constraint firstItem="KhC-Cc-Kok" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Ctd-02-km7"/>
                             <constraint firstItem="kFE-YB-dsB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Tbo-Ax-eap"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wcT-pe-i2b" secondAttribute="trailing" id="m1I-hO-xxg"/>
-                            <constraint firstItem="kFE-YB-dsB" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="m8h-LD-UnY"/>
+                            <constraint firstItem="kFE-YB-dsB" firstAttribute="top" secondItem="KhC-Cc-Kok" secondAttribute="bottom" id="m8h-LD-UnY"/>
+                            <constraint firstItem="KhC-Cc-Kok" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="mjO-KR-6wk"/>
                             <constraint firstItem="wcT-pe-i2b" firstAttribute="top" secondItem="kFE-YB-dsB" secondAttribute="bottom" id="rUQ-iB-N5O"/>
                         </constraints>
                     </view>
@@ -189,6 +199,7 @@
                                 <color key="tintColor" systemColor="systemRedColor"/>
                             </barButtonItem>
                             <barButtonItem image="arrow.clockwise.icloud" catalog="system" id="ewt-cb-9N8"/>
+                            <barButtonItem systemItem="search" id="6s6-pA-gU3"/>
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
@@ -197,6 +208,9 @@
                         <outlet property="logoutBarButton" destination="Kve-Tg-15h" id="eHQ-0J-vwX"/>
                         <outlet property="memoCollectionView" destination="wcT-pe-i2b" id="mst-UT-JR1"/>
                         <outlet property="newMemoBarButton" destination="Sni-gH-aUo" id="E2Q-DR-2iZ"/>
+                        <outlet property="searchBar" destination="KhC-Cc-Kok" id="RxX-gK-xCw"/>
+                        <outlet property="searchBarButton" destination="6s6-pA-gU3" id="FAC-xF-Svc"/>
+                        <outlet property="searchBarHeight" destination="x05-az-IKI" id="Cra-Lo-pFb"/>
                         <outlet property="syncBarButton" destination="ewt-cb-9N8" id="JGk-m0-Qcp"/>
                         <segue destination="uJS-FO-dO5" kind="show" identifier="memoDetail" id="9AR-Zi-Pso"/>
                     </connections>
