feat: 새 메모 작성 시 이미지를 받아오는 BehaviorRelay를 nil을 처음으로 내보내는 PublishRelay로 변경, placeholder 이미지 추가

--- a/PhotoMemo/Storyboard/Base.lproj/Main.storyboard
+++ b/PhotoMemo/Storyboard/Base.lproj/Main.storyboard
@@ -227,7 +227,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e6V-Ak-Ec4">
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AddPhoto_kor" translatesAutoresizingMaskIntoConstraints="NO" id="e6V-Ak-Ec4">
                                 <rect key="frame" x="0.0" y="140" width="414" height="269"/>
                                 <gestureRecognizers/>
                                 <connections>
@@ -407,6 +407,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="AddPhoto_kor" width="708" height="495"/>
         <image name="arrow.clockwise.icloud" catalog="system" width="128" height="88"/>
         <image name="circles.hexagonpath.fill" catalog="system" width="128" height="112"/>
         <image name="gearshape.fill" catalog="system" width="128" height="121"/>
