--- a/PhotoMemo/View/MemoCollectionViewCell.xib
+++ b/PhotoMemo/View/MemoCollectionViewCell.xib
@@ -3,7 +3,6 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -37,7 +36,7 @@
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <color key="backgroundColor" name="memoBase"/>
+            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="4Qo-uj-ZTu" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="2F1-tF-SaS"/>
                 <constraint firstItem="5cj-eL-ipu" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="2HF-Z0-b4T"/>
@@ -67,8 +66,5 @@
     </objects>
     <resources>
         <image name="checkmark.circle.fill" catalog="system" width="128" height="121"/>
-        <namedColor name="memoBase">
-            <color red="1" green="1" blue="0.70999997854232788" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
     </resources>
 </document>
